tests/specs/publish/relative_package_imports_from_root/publish.out
[WILDCARD]
error[relative-package-import]: invalid relative import from the '@denotest/root' package into the '@denotest/add' package
 --> [WILDLINE]mod.ts:1:15
  | 
1 | export * from "./add/mod.ts";
  |               ^^^^^^^^^^^^^^ the specifier
  | 
  = hint: replace the relative import with a bare specifier that imports from the other package by name and optionally an export (ex. "@denotest/add")

  info: importing modules in another package using a relative import won't work once the packages are published
  docs: https://jsr.io/go/relative-package-import

error: Found 1 problem
